# vtk.nim

./: README.md
examples/c++/: CMakeLists.txt  ex01_cylinder  ex01_cylinder.cpp
src/: ex01  ex01.nim  ex02.nim  ex03  ex03.nim  zrecursive.nim
src/wrapper/: salida.txt  salida2.txt  vtk.c2nim  vtk_wrapper.nim
src/wrapper/all/: BHTree.nim  DICOMAppHelper.nim  DICOMCMakeConfig.nim  DICOMCallback.nim  DICOMConfig.nim  DICOMFile.nim  DICOMParser.nim  DICOMParserMap.nim  DICOMTypes.nim  DatabaseSchemaWith2Tables.nim  ExternalVTKWidget.nim  H5RageAdaptor.nim  LSDynaFamily.nim  LSDynaMetaData.nim  PIOAdaptor.nim  PIOData.nim  PyVTKEnum.nim  PyVTKExtras.nim  PyVTKNamespace.nim  PyVTKObject.nim  PyVTKSpecialObject.nim  PyVTKTemplate.nim  QFilterTreeProxyModel.nim  QQuickVTKInteractiveWidget.nim  QQuickVTKInteractorAdapter.nim  QQuickVTKRenderItem.nim  QQuickVTKRenderWindow.nim  QVTKApplication.nim  QVTKInteractor.nim  QVTKInteractorAdapter.nim  QVTKOpenGLNativeWidget.nim  QVTKOpenGLStereoWidget.nim  QVTKOpenGLWindow.nim  QVTKRenderWidget.nim  QVTKRenderWindowAdapter.nim  QVTKTableModelAdapter.nim  QVTKWin32Header.nim  README.md  XrExtensions.nim  vtk3DLinearGridCrinkleExtractor.nim  (+3102 more)
src/wrapper/filters/: vtkCylinderSource.nim
